stacks/jumphost/001-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A stack for jumphost/jenkins server
Parameters:
  AmiId:
    Type: AWS::EC2::Image::Id
    Default: ami-428aa838
  InstanceType:
    Type: String
    Default: t2.micro
  VpcId:
    Type: AWS::EC2::VPC::Id
    Default: vpc-c57e7dbd
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: brickmeal-2018
  EipAllocationId:
    Type: String
    Default: eipalloc-b8c7ea8f
Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: JumphostSg
      GroupDescription: Security group for ssh jumphost
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow everything outbound
          IpProtocol: -1
      SecurityGroupIngress:
        - CidrIp: 216.30.189.247/32
          Description: SSH from Tom S house
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 216.30.189.247/32
          Description: Jenkins from Tom S house
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
        - CidrIp: 216.98.77.170/32
          Description: SSH from LH office
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 216.98.77.170/32
          Description: Jenkins from LH office
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
      VpcId:
        Ref: VpcId
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: AmiId
      InstanceType:
        Ref: InstanceType
      KeyName:
        Ref: KeyName
      SecurityGroupIds:
        - Ref: SecurityGroup
  EipAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId:
        Ref: EipAllocationId
      InstanceId:
        Ref: EC2Instance
